# python-learn

./: README.md  database.py  main.py  pyproject.toml
app/config/: _environment.py
app/todoApp/: database.py  main.py  models.py
app/todoApp/routers/: todos.py
practice/: book.py
practice/todoApp/: database.py  main.py  models.py
practice/todoApp/alembic/: env.py
practice/todoApp/alembic/versions/: 3516c4be591c_create_users_link_table.py
practice/todoApp/config/: __init__.py  _environment.py
practice/todoApp/routers/: auth.py  todos.py
