[project]
name = "python-course"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "John Lu", email = "john.lu@trans-iot.com"},
]
dependencies = [
    "fastapi>=0.110.2",
    "uvicorn>=0.29.0",
    "sqlalchemy>=2.0.29",
    "aiosqlite>=0.20.0",
    "psycopg2-binary>=2.9.9",
    "python-dotenv>=1.0.1",
    "pydantic-settings>=2.2.1",
    "alembic>=1.13.1",
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
